--- a/tracker.html
+++ b/tracker.html
@@ -6,11 +6,11 @@
 <script src='js/jquery.js'></script>
 <script src='js/script.js'></script>
 <img src="banner.png" alt="PST TIME EVENT">
-<h3 value="utc" onClick="swapTime(event)">as of 2023/05/02 08:44:46 PM UTC</h3>
-<h4>as of 2023/05/02 08:44:46 PM UTC</h3>
+<h3 value="utc" onClick="swapTime(event)">as of 2023/05/02 09:06:42 PM UTC</h3>
+<h4>as of 2023/05/02 09:06:42 PM UTC</h3>
 <div>Times are tracked and claimed automatically.<br>Post in the <a href='https://www.playstationtrophies.org/forum/topic/334336-wait-a-minute-~-discussion/'>discussion thread</a> if you see any discrepancies and for further rules.</div><br>
 <div id="goal-count"><table><thead><tr class='percentageFill'><th>Current</th><th>Remaining</th><th>Progress</th></tr></thead>
-<tbody><tr class='percentageFill'><td>364</td><td>1036</td><td id="goalPercentage">26.0%</td></tr></tbody></table></div><br>
+<tbody><tr class='percentageFill'><td>365</td><td>1035</td><td id="goalPercentage">26.07%</td></tr></tbody></table></div><br>
 <div class="tab"><button class="tablinks active" onclick="openTab(event, 'remaining')">Remaining</button>
 <button class="tablinks" onclick="openTab(event, 'claimed')">Claimed</button>
 <button class="tablinks" onclick="openTab(event, 'leaderboard')">LB</button>
@@ -975,7 +975,6 @@
 <tr><td>20:58</tr></td>
 <tr><td>20:59</tr></td>
 <tr><td>21:01</tr></td>
-<tr><td>21:02</tr></td>
 <tr><td>21:03</tr></td>
 <tr><td>21:04</tr></td>
 <tr><td>21:05</tr></td>
@@ -1293,12 +1292,12 @@
 <tr><td>15:29 </td><td>wrestlefanatic77</td><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17653">17653</a></td><td style="text-align: right;">   69.23</td></tr>
 <tr><td>15:31 </td><td>Road2unner      </td><td><a href="https://www.playstationtrophies.org/profiles/Road2unner/log?id=19121">19121</a>      </td><td style="text-align: right;">   21.08</td></tr>
 <tr><td>15:34 </td><td>Dino_Roar       </td><td><a href="https://www.playstationtrophies.org/profiles/Dino_Roar/log?id=138996">138996</a>     </td><td style="text-align: right;">  100   </td></tr>
-<tr><td>15:35 </td><td>Dino_Roar       </td><td><a href="https://www.playstationtrophies.org/profiles/Dino_Roar/log?id=138999">138999</a>     </td><td style="text-align: right;">   99.65</td></tr>
-<tr><td>15:36 </td><td>Dino_Roar       </td><td><a href="https://www.playstationtrophies.org/profiles/Dino_Roar/log?id=139005">139005</a>     </td><td style="text-align: right;">   99.65</td></tr>
-<tr><td>15:37 </td><td>Dino_Roar       </td><td><a href="https://www.playstationtrophies.org/profiles/Dino_Roar/log?id=139011">139011</a>     </td><td style="text-align: right;">   99.65</td></tr>
+<tr><td>15:35 </td><td>Dino_Roar       </td><td><a href="https://www.playstationtrophies.org/profiles/Dino_Roar/log?id=138999">138999</a>     </td><td style="text-align: right;">   99.66</td></tr>
+<tr><td>15:36 </td><td>Dino_Roar       </td><td><a href="https://www.playstationtrophies.org/profiles/Dino_Roar/log?id=139005">139005</a>     </td><td style="text-align: right;">   99.66</td></tr>
+<tr><td>15:37 </td><td>Dino_Roar       </td><td><a href="https://www.playstationtrophies.org/profiles/Dino_Roar/log?id=139011">139011</a>     </td><td style="text-align: right;">   99.66</td></tr>
 <tr><td>15:38 </td><td>wrestlefanatic77</td><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17654">17654</a></td><td style="text-align: right;">   69.23</td></tr>
 <tr><td>15:39 </td><td>THE--ALCHEMlST  </td><td><a href="https://www.playstationtrophies.org/profiles/THE--ALCHEMlST/log?id=23635">23635</a>  </td><td style="text-align: right;">   28.52</td></tr>
-<tr><td>15:40 </td><td>Dino_Roar       </td><td><a href="https://www.playstationtrophies.org/profiles/Dino_Roar/log?id=139029">139029</a>     </td><td style="text-align: right;">   99.65</td></tr>
+<tr><td>15:40 </td><td>Dino_Roar       </td><td><a href="https://www.playstationtrophies.org/profiles/Dino_Roar/log?id=139029">139029</a>     </td><td style="text-align: right;">   99.66</td></tr>
 <tr><td>15:45 </td><td>THE--ALCHEMlST  </td><td><a href="https://www.playstationtrophies.org/profiles/THE--ALCHEMlST/log?id=23636">23636</a>  </td><td style="text-align: right;">   39.62</td></tr>
 <tr><td>15:47 </td><td>wrestlefanatic77</td><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17655">17655</a></td><td style="text-align: right;">   69.23</td></tr>
 <tr><td>15:48 </td><td>Dino_Roar       </td><td><a href="https://www.playstationtrophies.org/profiles/Dino_Roar/log?id=139032">139032</a>     </td><td style="text-align: right;">  100   </td></tr>
@@ -1416,7 +1415,8 @@
 <tr><td>20:34 </td><td>mattigummi45    </td><td><a href="https://www.playstationtrophies.org/profiles/mattigummi45/log?id=12777">12777</a>    </td><td style="text-align: right;">   75.84</td></tr>
 <tr><td>20:36 </td><td>Ryukori_        </td><td><a href="https://www.playstationtrophies.org/profiles/Ryukori_/log?id=13725">13725</a>        </td><td style="text-align: right;">   51.73</td></tr>
 <tr><td>20:57 </td><td>sum1_worsethan_u</td><td><a href="https://www.playstationtrophies.org/profiles/sum1_worsethan_u/log?id=13407">13407</a></td><td style="text-align: right;">   94.02</td></tr>
-<tr><td>21:00 </td><td>mattigummi45    </td><td><a href="https://www.playstationtrophies.org/profiles/mattigummi45/log?id=12778">12778</a>    </td><td style="text-align: right;">   57.06</td></tr>
+<tr><td>21:00 </td><td>THE--ALCHEMlST  </td><td><a href="https://www.playstationtrophies.org/profiles/THE--ALCHEMlST/log?id=23643">23643</a>  </td><td style="text-align: right;">   21.87</td></tr>
+<tr><td>21:02 </td><td>Road2unner      </td><td><a href="https://www.playstationtrophies.org/profiles/Road2unner/log?id=19125">19125</a>      </td><td style="text-align: right;">    8.31</td></tr>
 <tr><td>21:22 </td><td>mattigummi45    </td><td><a href="https://www.playstationtrophies.org/profiles/mattigummi45/log?id=12779">12779</a>    </td><td style="text-align: right;">   39.36</td></tr>
 <tr><td>21:40 </td><td>mattigummi45    </td><td><a href="https://www.playstationtrophies.org/profiles/mattigummi45/log?id=12780">12780</a>    </td><td style="text-align: right;">   24.85</td></tr>
 <tr><td>22:07 </td><td>Road2unner      </td><td><a href="https://www.playstationtrophies.org/profiles/Road2unner/log?id=19124">19124</a>      </td><td style="text-align: right;">    7.84</td></tr>
@@ -1486,17 +1486,17 @@
 <tr><td>Dino_Roar       </td><td style="text-align: right;">     41</td></tr>
 <tr><td>Hemming87       </td><td style="text-align: right;">     36</td></tr>
 <tr><td>Zetberg         </td><td style="text-align: right;">     25</td></tr>
+<tr><td>THE--ALCHEMlST  </td><td style="text-align: right;">     25</td></tr>
 <tr><td>Martz4040       </td><td style="text-align: right;">     25</td></tr>
-<tr><td>THE--ALCHEMlST  </td><td style="text-align: right;">     24</td></tr>
 <tr><td>staytrue1985    </td><td style="text-align: right;">     22</td></tr>
-<tr><td>mattigummi45    </td><td style="text-align: right;">     18</td></tr>
+<tr><td>mattigummi45    </td><td style="text-align: right;">     17</td></tr>
 <tr><td>Jerry_Appleby   </td><td style="text-align: right;">     16</td></tr>
 <tr><td>Darth_Krid      </td><td style="text-align: right;">     14</td></tr>
 <tr><td>Dolken_swe      </td><td style="text-align: right;">     14</td></tr>
 <tr><td>slammajamma28   </td><td style="text-align: right;">      8</td></tr>
 <tr><td>R1p3r_5000      </td><td style="text-align: right;">      8</td></tr>
 <tr><td>Da-Eastside     </td><td style="text-align: right;">      8</td></tr>
-<tr><td>Road2unner      </td><td style="text-align: right;">      6</td></tr>
+<tr><td>Road2unner      </td><td style="text-align: right;">      7</td></tr>
 <tr><td>diskdocx        </td><td style="text-align: right;">      5</td></tr>
 <tr><td>Barra333        </td><td style="text-align: right;">      4</td></tr>
 <tr><td>Xemik           </td><td style="text-align: right;">      4</td></tr>
@@ -2890,7 +2890,7 @@
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       46</td></tr>
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       47</td></tr>
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       48</td></tr>
-<tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       49</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/Road2unner/log?id=19125">19125</a></td><td>8.31    </td><td style="text-align: right;">       49</td></tr>
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       50</td></tr>
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       51</td></tr>
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       52</td></tr>
@@ -3295,7 +3295,7 @@
 <tr><td>MISSING                                                                                     </td><td>MISSING </td><td style="text-align: right;">       43</td></tr>
 <tr><td>MISSING                                                                                     </td><td>MISSING </td><td style="text-align: right;">       44</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/THE--ALCHEMlST/log?id=23633">23633</a></td><td>26.02   </td><td style="text-align: right;">       45</td></tr>
-<tr><td>MISSING                                                                                     </td><td>MISSING </td><td style="text-align: right;">       46</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/THE--ALCHEMlST/log?id=23643">23643</a></td><td>21.87   </td><td style="text-align: right;">       46</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/THE--ALCHEMlST/log?id=23629">23629</a></td><td>67.16   </td><td style="text-align: right;">       47</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/THE--ALCHEMlST/log?id=23632">23632</a></td><td>41.57   </td><td style="text-align: right;">       48</td></tr>
 <tr><td>MISSING                                                                                     </td><td>MISSING </td><td style="text-align: right;">       49</td></tr>
